add practice file

--- a/pandas_practice/pandas_practice_scaling.ipynb
+++ b/pandas_practice/pandas_practice_scaling.ipynb
@@ -1648,7 +1648,9 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "35fe70ee",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -1677,7 +1679,7 @@
     "bicycle['이동거리_cut']=pd.cut(bicycle['이동거리'], bins, labels=labels, right=False)\n",
     "#혹은\n",
     "bicycle['이동거리_cut']=pd.cut(bicycle['이동거리'], bins=3)\n",
-    "bicycle['이동거리_cut'].value_counts() #이렇게 임의로 3구간을 나누면 데이터쏠림 현상이 발생할 수 있음 =>qcut()을 사용\n"
+    "bicycle['이동거리_cut'].value_counts() #이렇게 임의로 3구간을 나누면 데이터쏠림 현상이 발생할 수 있음 =>qcut()을 사용"
    ]
   },
   {
@@ -5048,7 +5050,9 @@
    "cell_type": "code",
    "execution_count": 67,
    "id": "b164e813",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -5183,7 +5187,7 @@
    "source": [
     "gas1 = pd.read_csv('data/gas_first_2019.csv', encoding='euc-kr')\n",
     "gas1.head()\n",
-    "#1월 부터 6월 까지 상반기 데이터 로드\n"
+    "#1월 부터 6월 까지 상반기 데이터 로드"
    ]
   },
   {
@@ -6008,7 +6012,9 @@
    "cell_type": "code",
    "execution_count": 76,
    "id": "2e24e645",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "'''\n",
@@ -6021,7 +6027,7 @@
     "    '성별': ['여자', '남자', '남자', '여자', '남자']})\n",
     "df2 = pd.DataFrame({\n",
     "    '고객명': ['김연아', '박세리', '손흥민', '이대호', '타이거우즈'],\n",
-    "    '연봉': ['2000원', '3000원', '1500원', '2500원', '3500원']})\n"
+    "    '연봉': ['2000원', '3000원', '1500원', '2500원', '3500원']})"
    ]
   },
   {
@@ -6324,7 +6330,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:light"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
